@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-05-02 Warren L. DeLano <warren@delsci.com>	
+
+	* incorporated various fixes for pymol2.PyMOL instances.
+	
 2008-05-01 Warren L. DeLano <warren@delsci.com>	
 
 	* converted color names storage over to a dictionary (lexicon)
